syntax= "proto3";

package authentication.microservice;

import "google/protobuf/empty.proto";

service AuthenticationService {

  rpc SayHello(google.protobuf.Empty) returns(SayHelloReponse) { }

}

message SayHelloReponse {
  string message= 1;
}